--- a/software/autoroom-web/src/pages/Realtime/styles.css
+++ b/software/autoroom-web/src/pages/Realtime/styles.css
@@ -1,123 +1,165 @@
-* {
-    margin: 0;
-    padding: 0;
-    outline: 0;
-    box-sizing: border-box;
+@import url('https://fonts.googleapis.com/css?family=Oswald&display=swap');
+
+.dashboard-container {
+  font-family: 'Oswald', sans-serif;
+  display: grid;
+  grid-template-columns: 240px 1fr;
+  grid-template-rows: 50px 1fr 50px;
+  grid-template-areas:
+    "sidenav header"
+    "sidenav main"
+    "sidenav footer";
+  height: 100vh;
 }
 
-body{
-    font: 400 14px Roboto, sans-serif;
-    background: black;
-    -webkit-font-smoothing: antialiased;
+/* Give every child element its grid name */
+.header {
+  grid-area: header;
+  background-color: #648ca6;
 }
 
-.main-container{
-    width: 100%;
-    max-width: 1120px;
-    height: 100vh;
-    margin: 0 auto;
-    flex-direction: column;
-    display: flex;
-    align-items: stretch;
-    justify-content: space-between;
+.sidenav {
+  grid-area: sidenav;
+  background-color: #394263;
+}
+
+.main {
+  grid-area: main;
+  background-color: #e9eaef;
+}
+
+.footer {
+  grid-area: footer;
+  background-color: #648ca6;
+}
+
+.header, .footer {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 0 16px;
+  background-color: #648ca6;
+}
+
+.sidenav {
+  display: flex; /* Will be hidden on mobile */
+  flex-direction: column;
+  grid-area: sidenav;
+  background-color: #394263;
+}
+
+.sidenav__list {
+  padding: 0;
+  list-style-type: none;
+}
+
+.sidenav__list-item {
+  padding: 20px 20px 20px 40px;
+  color: #ddd;
+}
+.logo{
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  padding: 20px 20px 20px 20px;
+  color: #ddd;
+  border-bottom: 1px solid rgba(255, 255, 255, 0.2);;
+}
+.logo:hover {
+  background-color: rgba(255, 255, 255, 0.2);
+  cursor: pointer;
+}
+
+.logo img{
+  width: 70px;
+  height: 70px;
+  margin-right: 10px;
+  margin-top: 10px;
+}
+
+.sidenav__list-item:hover {
+  background-color: rgba(255, 255, 255, 0.2);
+  cursor: pointer;
+}
+.main-cards {
+  column-count: 2;
+  column-gap: 20px;
+  margin: 20px;
+}
+
+.card {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+  background-color: #FFF;
+  margin-bottom: 20px;
+  -webkit-column-break-inside: avoid;
+  box-sizing: border-box;
+  border-radius: 8px;
+}
+.card-title{
+  display: flex;
+  justify-content: center;
+  background-color: #394362;
+  width: 100%;
+  border-top-right-radius: 8px;
+  border-top-left-radius: 8px;
+}
+.card-title h1{
+  color: #FFF ;
+  font-size: 20px;
+  font-weight: 100;
 }
 .value{
-    align-items: center;
-    display: flex;
-    flex-direction: column;
-    flex-wrap: wrap;
-    justify-content: space-evenly;
-    width: 300px;
-    height: 200px;
-    background: white;
-    border-radius: 10px;
+  display: flex;  
+  align-items: center;
+  flex-direction: row;    
+  width: 100%;
 }
-.main-container div{
-    display: flex;
-    justify-content: space-evenly;
-    padding-bottom: 30px;
-    margin-top: 1rem;
+.value_timeLamp{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: row;    
+  width: 100%;
 }
-p{
-    color: white;
-    background-color:black;
-    width: 250px;
-    height: 50px;
-    border-radius: 10px;
-    align-items: center;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    display: flex;
-    align-items: center;
-    text-decoration: solid;
-    font: 400 18px Roboto, sans-serif;  
+.value img{
+  width: 50px;
+  height: 50px;
+  padding: 20px 20px 20px 20px;
 }
-h1{
-    margin-bottom: 10px;
+.value_timeLamp img{
+  width: 40px;
+  height: 50px;
+  padding: 20px 20px 20px 20px;
 }
-button{
-    background-color: black;
-    border: none;
-    color: white;
-    padding: 15px 32px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 16px;
-    transition-duration: 0.4s;
-    border-radius: 12px;
-}
-button:hover {
-    background-color: rgb(59, 59, 59); /* Green */
-    color: white;
+.value_timeLamp button{
+  width: 100px;
+  height: 50px;
+  border-radius: 8px; 
 }
 
-.header {
-    overflow: hidden;
-    background-color: orange;
-    padding: 20px 10px;
-  }
-  
-  .header a {
-    float: left;
-    color: black;
-    text-align: center;
-    padding: 12px;
-    text-decoration: none;
-    font-size: 18px; 
-    line-height: 25px;
-    border-radius: 4px;
-  }
-  
-  .header a.logo {
-    margin-top: 10px;
-    font-size: 25px;
-    font-weight: bold;
-  }
-  
-  .header a:hover {
-    background-color: black;
-    color: white;
-  }
-  
-  .header a.active {
-    background-color: black;
-    color: white;
-  }
-  
-  .header-right {
-    float: right;
-  }
-  
-  @media screen and (max-width: 500px) {
-    .header a {
-      float: none;
-      display: block;
-      text-align: left;
-    }
-    
-    .header-right {
-      float: none;
-    }
-  }
+/* Force varying heights to simulate dynamic content */
+.card:first-child {
+  height: 485px;  
+}
+
+.card:nth-child(2) {
+  height: 200px;  
+}
+
+.card:nth-child(3) {
+  height: 265px;
+}
+.card:nth-child(3) img{
+  width: 180px;
+  height: 160px;
+}
+.card:nth-child(4) {
+  height: 265px;
+}
+.card:nth-child(4) img{
+  width: 180px;
+  height: 160px;
+}
